<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent"
              android:gravity="center"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:text="@string/user_info_title"
              android:layout_marginTop="97dp"
              style="@style/title_text"
              android:id="@+id/textView"/>

    <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/user_info_et_name"
            android:layout_marginTop="63dp"
            style="@style/etText"
            android:paddingStart="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
    />

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="22dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/user_info_et_family"
            style="@style/etText"
            android:id="@+id/etFamily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/etName"
    />
    <EditText
            android:id="@+id/etPatronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/user_info_et_patronymic"
            style="@style/etText"
            android:paddingStart="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/etFamily"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/user_info_btn_text"
            android:elevation="20dp"
            style="@style/btn_text"
            android:background="@drawable/button_registration_background"
            app:layout_constraintTop_toBottomOf="@+id/etPatronymic"/>


</androidx.constraintlayout.widget.ConstraintLayout>