<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/title_text"
              app:layout_constraintEnd_toEndOf="parent"
              android:gravity="center"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:text="@string/registration_title"
              android:layout_marginTop="144dp"
              android:id="@+id/textView"/>


    <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reg_edit_text_phone"
            android:paddingStart="22dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/etText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="68dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/reg_edit_text_password"
            android:paddingStart="22dp"
            android:id="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            style="@style/etText"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber"/>



    <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/registration_btn_text"
            android:elevation="20dp"
            style="@style/btn_text"
            android:background="@drawable/button_registration_background"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>